# ia

./: CMakeLists.txt  Makefile  ia.bkl
include/: CMakeLists.txt  Makefile
include/ia/: Makefile  ia.h  ia_image.h  ia_signal.h
include/ia/algo/: Makefile  ia_binarize.h  ia_contours.h  ia_otsu.h
src/: CMakeLists.txt  Makefile  ia.mak  ia_gif.c  ia_image.c  ia_signal.c  ia_tiff.c
src/algo/: ia_binarize.c  ia_contours.c  ia_convolution.c  ia_distance_transform.c  ia_fft.c  ia_morphology.c  ia_otsu.c
