# CMakeLists.txt
cmake_minimum_required(VERSION 2.8)
SET(PROJECT_NAME ia)
PROJECT (${PROJECT_NAME})
OPTION(BUILD_SHARED_LIBS "Should shared libraries be the default?" YES )
SET(PLATFORM linux)

SET(${PROJECT_NAME}_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin)

SET(LIBS_DIR ${${PROJECT_NAME}_SOURCE_DIR}/lib)
SET(EXE_DIR ${${PROJECT_NAME}_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${LIBS_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${EXE_DIR})

INCLUDE_DIRECTORIES(
	${${PROJECT_NAME}_SOURCE_DIR}/include
	${${PROJECT_NAME}_SOURCE_DIR}/src
	${${PROJECT_NAME}_BINARY_DIR}
)

LINK_DIRECTORIES(${LIBS_DIR} /usr/local/lib /usr/lib /lib)

INCLUDE(FindJPEG)
if (JPEG_FOUND)
	OPTION(WITH_JPEG "Build with libjpeg" YES)

	IF(WITH_JPEG)
		ADD_DEFINITIONS(-DHAVE_JPEGLIB)
		LINK_LIBRARIES(${JPEG_LIBRARIES})
		INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})
	ENDIF(WITH_JPEG)
ENDIF(JPEG_FOUND)

INCLUDE(FindTIFF)
if (TIFF_FOUND)
	OPTION(WITH_TIFF "Build with libtiff" YES)

	IF(WITH_TIFF)
		ADD_DEFINITIONS(-DHAVE_TIFFLIB)
		LINK_LIBRARIES(${TIFF_LIBRARIES})
		INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
	ENDIF(WITH_TIFF)
ENDIF(TIFF_FOUND)


SUBDIRS(src)
